<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_weight="@dimen/main_layout_weight_number">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/name_text_view"
            android:textSize="18sp">
        </TextView>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp">

            <requestFocus>
            </requestFocus>
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="@dimen/main_layout_weight_number">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/email_text_view"
            android:textSize="18sp">
        </TextView>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="@dimen/main_layout_weight_number"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/age_text_view"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:layout_weight="0.01"
            android:ems="10"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="@dimen/main_layout_weight_number">

        <Button
            android:id="@+id/addButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/add_button">
        </Button>

        <Button
            android:id="@+id/readButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_button">
        </Button>

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button">
        </Button>

        <Button
            android:id="@+id/fillDatabaseButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fill_db_button"/>

        <Button
            android:id="@+id/killDBButton"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/holo_red_dark"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="@dimen/main_layout_weight_number"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/funcTextView"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/func_text_view"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/funcEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/funcReadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/func_read_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="@dimen/main_layout_weight_number"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/id_text_view"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:ems="10"
            android:inputType="number"/>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_button"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:text="@string/delete_button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="@dimen/main_layout_weight_number"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ageSelectButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/age_selector_button"/>

        <EditText
            android:id="@+id/ageSelectEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="@dimen/main_layout_weight_number"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nameSelectButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/name_button"/>

        <EditText
            android:id="@+id/nameSelectEditText"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.26"
            android:ems="10"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/nameAgeSumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age_selector_button"/>

        <Button
            android:id="@+id/namesAgeSumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ages_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@dimen/main_layout_weight_number"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sortReadButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_button"/>

        <RadioGroup
            android:id="@+id/sortReadRadioGroup"
            android:layout_width="172dp"
            android:layout_height="116dp">

            <RadioButton
                android:id="@+id/nameRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/byName_radio_button">
            </RadioButton>

            <RadioButton
                android:id="@+id/emailRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/byEmail_radio_button">
            </RadioButton>

            <RadioButton
                android:id="@+id/ageAscRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/byAgeAsc_radio_button">
            </RadioButton>

            <RadioButton
                android:id="@+id/ageDescRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/byAgeDesc_radio_button">
            </RadioButton>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="00:00:00"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/timerStopStartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="00:00:00"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/timerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="stop/start"/>

        <Button
            android:id="@+id/timerClearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="timer clear"/>
    </LinearLayout>

</LinearLayout>
